--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     },
 	"require": {
         "php": ">=5.3.3",
-        "gnkw/http" : "2.*"
+        "gnkw/http" : "2.*",
+        "gnkam/base" : "*@dev"
     },
     "minimum-stability": "dev"
 }
